Improved merge performance greatly
indexing is still taking a lot longer than the go version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,16 @@
 [package]
-name = "csearch"
+name = "codesearch-rs"
 version = "0.1.0"
 authors = ["Vernon Jones <vernonrjones@gmail.com>"]
+
+[profile.dev]
+opt-level = 0
+debug = true
+
+[profile.release]
+opt-level = 3
+debug = false
+debug-assertions = false
 
 [dependencies]
 chrono = "0.2"
