--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,9 @@ log = "0.3.5"
 num = "0.1.30"
 tempfile = "1.1.3"
 hprof = "0.1.3"
+consts = { path = "consts" }
 csearch = { path = "csearch" }
+varint = { path = "varint" }
 
 [features]
 profile = []
