--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,22 +19,14 @@ log = "0.3.5"
 num = "0.1.30"
 tempfile = "1.1.3"
 hprof = "0.1.3"
-consts = { path = "consts" }
-csearch = { path = "csearch" }
-cindex = { path = "cindex" }
-profiling = { path = "profiling" }
-varint = { path = "varint" }
+consts = { path = "src/consts" }
+customlogger = { path = "src/customlogger" }
+csearch = { path = "src/csearch" }
+cindex = { path = "src/cindex" }
+profiling = { path = "src/profiling" }
+varint = { path = "src/varint" }
 
 [features]
 profile = []
 
-
-[[bin]]
-name = "csearch"
-path = "src/csearch.rs"
-doctest = true
-
-[[bin]]
-name = "cindex"
-path = "src/cindex.rs"
 
