--- a/src/libvarint/Cargo.toml
+++ b/src/libvarint/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
-name = "profiling"
+name = "libvarint"
 version = "0.1.0"
 authors = ["Vernon Jones <vernonrjones@gmail.com>"]
 
 [dependencies]
-hprof = "0.1.3"
