--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,11 @@ num = "0.1.30"
 tempfile = "1.1.3"
 hprof = "0.1.3"
 consts = { path = "src/consts" }
-customlogger = { path = "src/customlogger" }
-csearch = { path = "src/csearch" }
-cindex = { path = "src/cindex" }
-profiling = { path = "src/profiling" }
-varint = { path = "src/varint" }
+libcustomlogger = { path = "src/libcustomlogger" }
+libcsearch = { path = "src/libcsearch" }
+libcindex = { path = "src/libcindex" }
+libprofiling = { path = "src/libprofiling" }
+libvarint = { path = "src/libvarint" }
 
 [features]
 profile = []
