--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ clap = "1.5.5"
 regex = "0.1.48"
 regex-syntax = "0.2.2"
 log = "0.3.5"
+walkdir = "0.1"
 
 consts = { path = "src/consts" }
 libcustomlogger = { path = "src/libcustomlogger" }
