--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ glob = "0.2"
 regex = "0.1"
 regex-syntax = "0.2"
 log = "0.3"
+tempfile = "1.1"
 walkdir = "0.1"
 
 consts = { path = "src/consts" }
